# learning-lm-rs

./: .gitignore  Cargo.toml  README.md  app.py  build.rs  model_architecture.md  环境变量.md  项目报告.md
cuda/: operator.cu  operator.ptx
cuda-kernels/: attn.cu  dot.cu  gather.cu  matmul.cu  rms_norm.cu  rope.cu  sampling.cu  softmax.cu  swiglu.cu
page/: README.md  index.html  package-lock.json  package.json
page/src/: App.vue  main.js  style.css
src/: api.rs  chat.rs  config.rs  gpu.rs  kernels.cu  kernels.ptx  kvcache.rs  lib.rs  main.rs  model.rs  model_cuda.rs  operators.rs  params.rs  perf_tests.rs  server.rs  sse.rs  tensor.rs  types.rs
src/operators_cuda/: cuda_kernels.rs  mod.rs
src/static/: index.html
static/: index.html
tests/: test.py
