[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.5"
tokenizers = "0.21"
rand = "0.8"
half = { version = "2.2", features = ["serde"] }
rayon = "1.10"
actix-web = "4.10.2"
actix-cors = "0.7.0"     # 配套的跨域支持库
