[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.5"
tokenizers = "0.21"
rand = "0.8"
rayon = "1.10"
log = "0.4.26"
axum = "0.8"
half = "2.6"
num-traits = "0.2"
dashmap = "6.1"
tokio = { version = "1.44", features = ["full"] }
