[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.5"
tokenizers = "0.21"
rand = "0.8"
half = "2.6"
rayon = "1.10"
dashmap = "6.1"
num_cpus = "1.16"

[features]
default = ["distributed", "chat"]
distributed = []
chat = []
story = []